--- a/.env
+++ b/.env
@@ -1,9 +1,8 @@
 PORT=5000
 MONGO_URI='mongodb://127.0.0.1:27017/e-commerce'
-JWT_SECRET=abac12afsdkjladf
+JWT_SECRET=
 NODE_ENV=development
-PAYPAL_CLIENT_ID=AXSfTqqh94LI5VysiBMd6Lv-sMS6CLGQWCtlnLjedLWf2WCSLcS7_T1P-rgxmEj1RbblHXXFqlS9764x
-PAYPAL_SECRET=ELvj3DpTprAUW9_bcYad9sPvO1P9RL_izg5oBHlh13jvoSpBnLFJ20JyfDUm_y2fPTg-U1VWrP3l0vu
-
-EMAIL_USER=neodesk2025@gmail.com
-EMAIL_PASS=jskcooourtneioqp
+PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
+EMAIL_USER=
+EMAIL_PASS=
